add framerate config

--- a/public/send.html
+++ b/public/send.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <!-- 接続を開始するためのボタン -->
+    <p>注意：Chromeじゃないとかなりカクつきます。またbroadcastボタンを押したら、タブ共有じゃないと音声が共有されません。</p>
     <button id="button_broadcast">broadcast</button>
     <div>
       <video id="video_el" controls autoplay playsinline muted="muted" ></video>
